More Angular notes after template-driven forms tutorial.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -11,6 +11,7 @@
     "These are things I remember from working with Angular at Google that aren't always apparent in tutorials or snippets that I didn't want to forget over time. This is just a brain dump and should be explicitly fact checked to make sure I didn't remember anything wrong.\n",
     "\n",
     "- A component instance variable must be **public** for the template to be able to reference it in **interpolation**.\n",
+    "  - also, in the template, you **don't use `this`** for the component instance variables\n",
     "- If I remember correctly, a **directive** is basically a component without a template (behavior only). They are normally attached via attributes, but technically components could be as well (though that's less common).\n",
     "- The **selector** for a component is usually taken as meaning the element name that will become that component, but technically it works this way:\n",
     "  1. When the template is compiled, all tags and attributes are checked against either the HTML spec or the selectors from component and directive metadata.\n",
@@ -27,7 +28,149 @@
     "- **Unit tests** are in Jasmine syntax (describe, it, spyOn), run by Karma. There's also Protractor, which I do not have experience with. Screendiff and integration testing (eg. CUJs) can be done via **Selenium**. I have experience with that but in a way that is not applicable to the real world, so I still need to learn the real world way.\n",
     "  - **matchers** are functions that return something that jasmine can use to decide if an object returned by a test maches a condition. You can use the built-in matchers like toEqual(), or import other matchers from libraries, or make them yourselves. Somehow, it ends up so that you can use matchers as functions in-place in some calls (like .toBeCalledWith(any(Object)), or use them in expect() statements `expect(bla).toBe(5)` (uses toBe matcher). I don't remember the exact mechanism here - presumably matchers are somehow decorated or declared somewhere that jasmine looks for and added to the prototype of some object returned by expect()?\n",
     "- **Dependency injection** lets you get things like **services** (which are just classes that you mark as injectable and can assume are singletons) as members of component classes by adding them as constructor args. Angular constructs components instead of you, and it knows how to inject based on its configuration. You would usually configure a service to be injectable forRoot, but it's possible to do more complicated configuration such as matching tokens (eg. if need to inject multiple variations of the same type of thing). This is done via modules.\n",
-    "- **Modules** are the way Angular is configured to understand new tags (via components included in module), pipes, injectable objects, etc. Modules import other modules, declare components, export components, etc. **CommonModule** is the one that adds basic Angular stuff like (click), \\*ngFor, etc. although for some reason that is not present in the default app and it still works.\n"
+    "- **Modules** are the way Angular is configured to understand new tags (via components included in module), pipes, injectable objects, etc. Modules import other modules, declare components, export components, etc. **CommonModule** is the one that adds basic Angular stuff like (click), \\*ngFor, etc. although for some reason that is not present in the default app and it still works.\n",
+    "- [] is for **dynamic binding** in general (attribute set at runtime based on TS code in quotes)\n",
+    "  - it can be used for any attribute (I think)\n",
+    "  - it can be used to set a class with [class.classname]\n",
+    "  - it can be used to set an attribute with [attr.attributename]\n",
+    "  - it can be used to set an input on a component (the most common way you'll see it\n",
+    "  - if you just need to pass a literal string, don't use [], because that will force you to nest quotes for no reason\n",
+    "- () is for **event binding** in general\n",
+    "  - it is used to execute the TS code in quotes when an event triggers\n",
+    "  - generally the event is either built into Angular (like 'click' on buttons) or is an `@Output()` of a component\n",
+    "  - from the perspective of the code that executes on an event, the `$event` value gets set in the TS code that runs and you can pass that to a TS method call if needed\n",
+    "  - when you define your own event via @Output(), you are defining an observable, and the emitted values become $event one by one on anyone using () to bind to them\n",
+    "- `[(ngModel)]` (\"banana in a box\") is for **two-way-binding** where updating the form field will update the variable bound to it and vice versa (without infinite recursion happening)\n",
+    "  - If I recall correctly (though I'm mostly thinking of Dart I think), this kind of syntax in general means you're binnding to an input and output that happen to have the same name at the same time, and they each are implemented in the directive/component to receive inputs and send outputs correctly while updating internal state\n",
+    "  - although contrary to that, I've seen somewhere else that it literally takes what you put in quotes and adds = to it, so maybe I'm wrong\n",
+    "- template TS syntax (eg. in {{ }} for interpolation or in a [] or () expression) is a subset of TS\n",
+    "  - generally can be an expression that returns a value, when applicable\n",
+    "  - doesn't need to end with ;\n",
+    "  - can use ; to separate multiple statements though\n",
+    "- the **JS event loop** can't continue on to the next thing until your TS code completely returns from whatever it was handling\n",
+    "  - so if you change an input to a component and then read something else on the component before returning from a click handler, change detection has had no time to run yet\n",
+    "  - You can inject `ChangeDetectorRef` and run `detectChanges()` if you want to do an inline change detection change without returning back to the queue\n",
+    "  - You can also use `markForCheck()` to make sure it runs change detection on something you changed (in a way that Angular won't see), but this will run on the next ordinary change detection run (eg. from the event queue)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "673a7c15",
+   "metadata": {},
+   "source": [
+    "# Some Important Concepts\n",
+    "\n",
+    "These are not well-illustrated by looking at tutorial snippets but are important to know.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "62c56fb6",
+   "metadata": {},
+   "source": [
+    "## Template References Variables\n",
+    "\n",
+    "### Normal Usage\n",
+    "\n",
+    "```html\n",
+    "<div #myvar>\n",
+    "  <button (click)=\"dostuff(myvar)\">click</button>\n",
+    "</div>\n",
+    "```\n",
+    "\n",
+    "In this case, you can use that name `myvar` elsewhere in the template to refer to the HTML element it is on. In this example, it was passed into a method on the component which will be expecting an `HTMLElement` to do some stuff with.\n",
+    "\n",
+    "### On Component\n",
+    "\n",
+    "```html\n",
+    "<my-component #myvar>\n",
+    "  <button (click)=\"dostuff(myvar)\">click</button>\n",
+    "</my-component>\n",
+    "```\n",
+    "\n",
+    "In this case, because the element is a component, the component is passed into dostuff() instead of the HTML element, allowing you to **access its members**.\n",
+    "\n",
+    "### With Argument\n",
+    "\n",
+    "```html\n",
+    "<form #myform=\"ngForm\">\n",
+    "  <div *ngIf=\"myform.valid\">...</div>\n",
+    "</form>\n",
+    "```\n",
+    "\n",
+    "In this case, the reference variable is bound to an **exported directive name** that has been applied on the element. When you include **FormsModule** in your app module, all `<form>` tags are marked with the **NgForm Directive**, which exports `ngForm` for this usage.\n",
+    "\n",
+    "### Variable Scope\n",
+    "\n",
+    "In general, the variable is scoped to the whole template (even things before it was declared). But certain structural things like `*ngIf` and `*ngFor` create a deeper lexical scope that hides it from above.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "03144287",
+   "metadata": {},
+   "source": [
+    "## Template-Driven Forms\n",
+    "\n",
+    "### ngForm\n",
+    "\n",
+    "When you import `FormsModule`, any `<form>` tag in your template will be marked with an `NgForm` directive, which can be accessed from a template reference variable as shown above, to access things like overall form validation state, etc.\n",
+    "\n",
+    "You can also listen to the `(ngSubmit)` event on a form tag to trigger when a form is submitted. I've also seen people just listen to the `(click)` of the button itself without problems (as long as you update whatever state you are caring about).\n",
+    "\n",
+    "Ngform looks for all form controls under it and uses their `name` attributes to build an internal representation of the form state. It also understands that button of type _submit_ will submit the form (trigger the ngSubmit event). Note that HTML `<label>` attributes look at `id` instead of `name`.\n",
+    "\n",
+    "### ngModel\n",
+    "\n",
+    "In addition to being for two-way binding, HTML form control elements within a form wrapped by NgForm also get wrapped as NgModel instances. You can access the state of individual form controls with `#mycontrol=\"ngModel\"`.\n",
+    "\n",
+    "### Validation\n",
+    "\n",
+    "Validation is happening all the time (after a user enters some input for instance). It is not directly tied to submission. For instance, if a field is empty and you have a `required` tag (from HTML spec, not from Angular) on the field, the control's `valid` property will be false, and so will the overall form.\n",
+    "\n",
+    "There are two ways you can react to the validity:\n",
+    "\n",
+    "1. via the `valid` properties of NgModel and NgForm.\n",
+    "2. via `ng-*` css classes (see below).\n",
+    "\n",
+    "### Submission\n",
+    "\n",
+    "A button that is marked as type `submit` will submit the form. All that means is that the state is changed to `submitted`. You have to listen for the event and do something useful with that.\n",
+    "\n",
+    "### CSS Classes\n",
+    "\n",
+    "NgForm adds css classes to the `<form>` and to child controls so that you can style them based on the validation state and such.\n",
+    "\n",
+    "Examples are:\n",
+    "\n",
+    "- ng-touched\n",
+    "- ng-dirty\n",
+    "- ng-pristine\n",
+    "- ng-valid\n",
+    "- ng-submitted\n",
+    "- etc.\n",
+    "\n",
+    "Both positive and negative versions are provided to make CSS styling easier.\n",
+    "\n",
+    "### Resetting\n",
+    "\n",
+    "`form.reset()` on Ngform will reset the state and values of the form. If the form was guraded by `*ngIf` and has two-way binding, this will probably just reset the state and the values will be correct. If the form was guarded by `[hidden]` instead, resetting will probably reset the values too, because change detection won't run if the form's inputs were not changed.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "80e80b80",
+   "metadata": {},
+   "source": [
+    "## ng-container\n",
+    "\n",
+    "This is just a special element you can add in your template that **doesn't add** anything to the **DOM**. This can be useful if you don't want to accidentally mess up alignments or styling by adding an extra div, for instance.\n",
+    "\n",
+    "The purpose of the element would be to hold things like `ngIf` to block child elements from existing.\n"
    ]
   },
   {
@@ -215,7 +358,7 @@
    "source": [
     "[Step 2A: Use mock heroes list.](https://github.com/davidpet/tutorials/commit/7644f8dd12b15b08195e90e78d84a68aab805435) - `*ngFor`\n",
     "\n",
-    "[Step 2B: Adding hero details with user edit.](https://github.com/davidpet/tutorials/commit/0e8514cfa3c2e932473adc29c29105b2eefc2727) - pipes, click event handler\n"
+    "[Step 2B: Adding hero details with user edit.](https://github.com/davidpet/tutorials/commit/0e8514cfa3c2e932473adc29c29105b2eefc2727) - pipes, click event handler, `*ngIf`, `[class.selected]` syntax to dynamically set a css class based on TS code\n"
    ]
   },
   {
@@ -356,9 +499,138 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ce561b7c",
+   "metadata": {},
+   "source": [
+    "## Template-Driven Form Tutorial\n",
+    "\n",
+    "Similarly to above, I created commits following [this tutorial](https://angular.io/guide/forms). The GitHub code is [here](https://github.com/davidpet/tutorials/tree/master/Angular/template-driven-form).\n",
+    "\n",
+    "I **didn't do tests** in this one because the stuff it dealt with is very simple from a testing perspective - there are no new concepts beyond what is in my tour of heroes tests. You would just query the DOM for the form control and keep sending text, checking classes, etc.\n",
+    "\n",
+    "I'm also not going to re-explain things already explained above in Tour of Heroes.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8533aca7",
+   "metadata": {},
+   "source": [
+    "### 1. Create Basic Form with Two-Way Binding\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f2717485",
+   "metadata": {},
+   "source": [
+    "[1A: Default App (css + no routing)](https://github.com/davidpet/tutorials/commit/1b008c18e978610d6eac131341a61601f764fc3c)\n",
+    "\n",
+    "[1B: Adding basic HTML form w/ mock data.](https://github.com/davidpet/tutorials/commit/83666ff7de8294756c715f94eb21019a93136970) - using [] to dynamically bind HTML attributes (not just inputs on components)\n",
+    "\n",
+    "[1C: Two-way binding the form fields.](https://github.com/davidpet/tutorials/commit/c32202b33bea4d8840b1937cd363e9d38c97b642) - ngModel banana in a box again\n",
+    "\n",
+    "[1D: Wrapping in form tag w/ ngForm ref.](https://github.com/davidpet/tutorials/commit/c7e3a72b90a707b79f955dc59002ae4c41752038) - ngForm directive as template reference variable\n",
+    "\n",
+    "[1E: Random changes from the tutorial.](https://github.com/davidpet/tutorials/commit/638689e54a84c71a91390ca75c789a6dfdf94b66) - wrapping form groups (no real effect here - just something that may improve some forms)\n",
+    "\n",
+    "[1F: Temporary proof of two-way binding.](https://github.com/davidpet/tutorials/commit/e5cb7dbf5a493d8929f13acbcdfeb85d4a4cb947) - how to see that your two-way binding is working, json pipe -> reverted in 1G (just the opposite of 1F)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a570bff5",
+   "metadata": {},
+   "source": [
+    "### 2. Form Validation\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7eddc166",
+   "metadata": {},
+   "source": [
+    "[2A: Showing validation status color.](https://github.com/davidpet/tutorials/commit/db7359793c9f66ddcbfd9c82c47c021e982595d7) - styling based on form control state, global styling (but could have been in the actual global styling file instead of here)\n",
+    "\n",
+    "[2B: Name is required again - what a ride!](https://github.com/davidpet/tutorials/commit/51158e61d3e3b248c2e1f363cfa1e4bc74465533) - marking a field as required for validation (HTML attribute, not angular thing - but used by ngForm)\n",
+    "\n",
+    "[2C: Displaying error on name validation failure.](https://github.com/davidpet/tutorials/commit/fc991055c3768fa65e36b25860da00e1c9a42b43) - showing/hiding error based on validation state from ngForm template reference variable, also using 'hidden' instead of ngIf, template reference variable for ngModel\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a76e4561",
+   "metadata": {},
+   "source": [
+    "### 3. New Hero Button\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7e4703c2",
+   "metadata": {},
+   "source": [
+    "[3A: New Hero button w/ val status reset.](https://github.com/davidpet/tutorials/commit/44e9743ef508e997684ef1527f0728de8006bdc2) - resetting form state\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3144f1ac",
+   "metadata": {},
+   "source": [
+    "### 4. Form Submission\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a581e3ab",
+   "metadata": {},
+   "source": [
+    "[4A: Submit button (does nothing yet).](https://github.com/davidpet/tutorials/commit/590953ce0b74101c4f2c1243475fcc637d7f45f3) - hiding button on invalid form, setting type to 'submit' for styling and so form knows it's the submit button\n",
+    "\n",
+    "[4B: Marking submision state on submission.](https://github.com/davidpet/tutorials/commit/e9dc1f89f3361fecb2c5b53db7dbd1ec261b3ea2) - responding to form submissions in code\n",
+    "\n",
+    "[4C: Hide the form in submitted state.](https://github.com/davidpet/tutorials/commit/4bdd967487633c8c643e148f79541b7df3878e49) - using hidden to hide the form on submission\n",
+    "\n",
+    "[4D: Showing submitted hero and edit button.](https://github.com/davidpet/tutorials/commit/14f0448055d1109df94fd2889c48266360b719c4) - showing submitted content on submission, button to go back to form by changing the state\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7292b7f4",
+   "metadata": {},
+   "source": [
+    "### 5. Final Tweaks\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ff1d8b3d",
+   "metadata": {},
+   "source": [
+    "[5A: Making form clean on edit.](https://github.com/davidpet/tutorials/commit/ba6f929939e7f59f17882cefe39cc491105694f0) - using \\*ngIf instead of \\[hidden\\] so that the form is pristine on edit\n",
+    "\n",
+    "[5B: Imporiving layout by including container tag.](https://github.com/davidpet/tutorials/commit/6226f5e5dfb1cc2f415d7dede46e3aeab5e65ac9) - container div at top for styling purposes\n",
+    "\n",
+    "[5C: Switching new and submit buttons to match tutorial.](https://github.com/davidpet/tutorials/commit/8647d3b4768e5c2b0f1c09b41a63e48e7d60f6ac) - swapping buttons to match final tutorial result\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d303086",
+   "id": "35fd9338",
    "metadata": {},
    "outputs": [],
    "source": []
