Updating Angular notes after reactive forms tutorial.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -31,6 +31,7 @@
     "- **Modules** are the way Angular is configured to understand new tags (via components included in module), pipes, injectable objects, etc. Modules import other modules, declare components, export components, etc. **CommonModule** is the one that adds basic Angular stuff like (click), \\*ngFor, etc. although for some reason that is not present in the default app and it still works.\n",
     "- [] is for **dynamic binding** in general (attribute set at runtime based on TS code in quotes)\n",
     "  - it can be used for any attribute (I think)\n",
+    "    - even attributes that are used as selectors for **directives** are ok to set dynamically with []\n",
     "  - it can be used to set a class with [class.classname]\n",
     "  - it can be used to set an attribute with [attr.attributename]\n",
     "  - it can be used to set an input on a component (the most common way you'll see it\n",
@@ -110,12 +111,21 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "55e5106b",
+   "metadata": {},
+   "source": [
+    "## Forms\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "03144287",
    "metadata": {},
    "source": [
-    "## Template-Driven Forms\n",
+    "### Template-Driven Forms\n",
     "\n",
-    "### ngForm\n",
+    "#### ngForm\n",
     "\n",
     "When you import `FormsModule`, any `<form>` tag in your template will be marked with an `NgForm` directive, which can be accessed from a template reference variable as shown above, to access things like overall form validation state, etc.\n",
     "\n",
@@ -123,11 +133,13 @@
     "\n",
     "Ngform looks for all form controls under it and uses their `name` attributes to build an internal representation of the form state. It also understands that button of type _submit_ will submit the form (trigger the ngSubmit event). Note that HTML `<label>` attributes look at `id` instead of `name`.\n",
     "\n",
-    "### ngModel\n",
+    "#### ngModel\n",
     "\n",
     "In addition to being for two-way binding, HTML form control elements within a form wrapped by NgForm also get wrapped as NgModel instances. You can access the state of individual form controls with `#mycontrol=\"ngModel\"`.\n",
     "\n",
-    "### Validation\n",
+    "Note that using two-way binding does not depend on being inside a form tag.\n",
+    "\n",
+    "#### Validation\n",
     "\n",
     "Validation is happening all the time (after a user enters some input for instance). It is not directly tied to submission. For instance, if a field is empty and you have a `required` tag (from HTML spec, not from Angular) on the field, the control's `valid` property will be false, and so will the overall form.\n",
     "\n",
@@ -136,11 +148,13 @@
     "1. via the `valid` properties of NgModel and NgForm.\n",
     "2. via `ng-*` css classes (see below).\n",
     "\n",
-    "### Submission\n",
+    "The built-in HTML form validation is disabled via `novalidate` on the form directive. This can be configured if needed. Angular replaces the built-in validation.\n",
+    "\n",
+    "#### Submission\n",
     "\n",
     "A button that is marked as type `submit` will submit the form. All that means is that the state is changed to `submitted`. You have to listen for the event and do something useful with that.\n",
     "\n",
-    "### CSS Classes\n",
+    "#### CSS Classes\n",
     "\n",
     "NgForm adds css classes to the `<form>` and to child controls so that you can style them based on the validation state and such.\n",
     "\n",
@@ -155,9 +169,86 @@
     "\n",
     "Both positive and negative versions are provided to make CSS styling easier.\n",
     "\n",
-    "### Resetting\n",
+    "#### Resetting\n",
     "\n",
     "`form.reset()` on Ngform will reset the state and values of the form. If the form was guraded by `*ngIf` and has two-way binding, this will probably just reset the state and the values will be correct. If the form was guarded by `[hidden]` instead, resetting will probably reset the values too, because change detection won't run if the form's inputs were not changed.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "aaaf63a4",
+   "metadata": {},
+   "source": [
+    "### Reactive Forms\n",
+    "\n",
+    "#### In Contrast to Template-Driven Forms\n",
+    "\n",
+    "Template-driven forms take the html template as the source of truth and communicate with TS via two-way binding.\n",
+    "\n",
+    "Reactive forms have a model (officially called the **form model**) inside the TS of a component as the source of truth, and the template is configured to bind to that. Reactive forms deal more with **observables**, **interfaces**, etc. It is technically possible (but confusing and a bad idea) to mix the two approaches since they use a common infrastructure.\n",
+    "\n",
+    "#### Advantages of Reactive Forms\n",
+    "\n",
+    "- immutability of objects (as opposed to two-way binding) = cleaner\n",
+    "- more efficient change detection (due to the above)\n",
+    "  - and don't have to trigger change detection as many times in tests because of how it works\n",
+    "- more scalable and dynamic\n",
+    "\n",
+    "#### Disadvantages of Reactive Forms\n",
+    "\n",
+    "- not as straightforward for simple cases (eg. a handful of control doing a simple input form)\n",
+    "\n",
+    "#### Parts that are the Same\n",
+    "\n",
+    "Reactive forms and template-driven forms are the same in terms of:\n",
+    "\n",
+    "- **CSS classes** like ng-valid\n",
+    "  - CAVEAT: if you style using the 'required' attribute, but you specify the attribute in the model, it won't work\n",
+    "    - to fix that, add a 'required' class in the template or something like that\n",
+    "- **testing** is mostly the same (finding controls in the DOM and sending events, etc.)\n",
+    "  - but you may not need to call fixture.detectchanges() and/or fixture.whenStable() so many times\n",
+    "- **submitting** works the same (button with 'submit' style and ngSubmit event)\n",
+    "\n",
+    "#### Resetting Form\n",
+    "\n",
+    "A nullable field will reset to `null` instead of the initial value on `formGroup.reset()`. This can be counterintuitive. You can also make it **non-nullable** to prevent that from happening (shown in the commits below).\n",
+    "\n",
+    "#### Basic Idea\n",
+    "\n",
+    "You create `FormControl` instances in code, and group them with `FormGroup` and `FormArray` as needed to create a model of the form. Rather than binding html form controls to objects in the template, you bind to names. The names match keys of model objects in code. You just need 1 top-level form group bound to the whole model in code, and then the child elements will find their place in the model tree.\n",
+    "\n",
+    "You can use methods of the model objects like `setValue()` and subscribe to the value changes as an observable, catching changes that happen either in code or in the UI. All this is shown in the commits below.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ba650c5d",
+   "metadata": {},
+   "source": [
+    "### ControlValueAccessor\n",
+    "\n",
+    "If you have a **custom component** that you want to act like a **form control** (eg. the way the built-in html form elements do), you can implement the **ControlValueAccessor interface**. This interface tells Angular how to get/set values for the component in the right format and stuff like that.\n",
+    "\n",
+    "After implementing the interface, then you can use the component in a template and use a directive like `formControlName` to bind it to a form control in the model (for reactive forms). You could use it similarly to an element like input (ngModel, etc.) in a template-driven form.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0306ddbf",
+   "metadata": {},
+   "source": [
+    "### Special Kinds of Custom Validators\n",
+    "\n",
+    "These are not shown in the snippets below, but it's good to know they exist.\n",
+    "\n",
+    "- **cross-field** - works same way as a normal validator but is specified in a form group instead of a control\n",
+    "  - then the validator knows which controls it wants to read from the group passed in\n",
+    "- **async** - for things like going to the server to check if a name is already in use\n",
+    "  - deals with observables and `model.pending` so you can show a spinner or something\n",
+    "  - https://angular.io/guide/form-validation#creating-asynchronous-validators\n"
    ]
   },
   {
@@ -624,13 +715,70 @@
     "\n",
     "[5B: Imporiving layout by including container tag.](https://github.com/davidpet/tutorials/commit/6226f5e5dfb1cc2f415d7dede46e3aeab5e65ac9) - container div at top for styling purposes\n",
     "\n",
-    "[5C: Switching new and submit buttons to match tutorial.](https://github.com/davidpet/tutorials/commit/8647d3b4768e5c2b0f1c09b41a63e48e7d60f6ac) - swapping buttons to match final tutorial result\n"
+    "[5C: Switching new and submit buttons to match tutorial.](https://github.com/davidpet/tutorials/commit/8647d3b4768e5c2b0f1c09b41a63e48e7d60f6ac) - swapping buttons to match final tutorial result\n",
+    "\n",
+    "[Multiple validators.](https://github.com/davidpet/tutorials/commit/1c96f82566702cc02313de9f56b63854b43770ce) - multiple validators in template, showing conditional validation errors in DOM\n",
+    "\n",
+    "[Adding custom validator.](https://github.com/davidpet/tutorials/commit/222a838cd9f2bc1ec46c86aab00656209ead768d) - custom validator, custom directive, showing custom error, regex use in validators\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "47b255af",
+   "metadata": {},
+   "source": [
+    "## Reactive Form Example\n",
+    "\n",
+    "These commits are loosely based on [this tutorial](https://angular.io/guide/reactive-forms) and are located at [this repo](https://github.com/davidpet/tutorials/tree/master/Angular/reactive-form)\n",
+    "\n",
+    "Not Included:\n",
+    "\n",
+    "- **tests** - because same as template-driven (just DOM stuff)\n",
+    "  - you could access reactive form members via componentInstance but that goes against the spirit of testing the page\n",
+    "- **submitting** - because it's exactly the same as template-driven version\n",
+    "\n",
+    "[Adding basic form elements.](https://github.com/davidpet/tutorials/commit/80b1cb3042e091d3fd75e8eea367c3ea47471307) - starts out the same as template-drive (adding html form controls with no bindings yet)\n",
+    "\n",
+    "[Adding FormControl with two-way binding.](https://github.com/davidpet/tutorials/commit/f89505905b41b16f4025072b3c469ff111056411) - single FormControl instance (& template binding)\n",
+    "\n",
+    "[Setting form control value from TS code.](https://github.com/davidpet/tutorials/commit/073bd629dedb4c03f07974bd24e524e9a85a16ce) - setting FormControl value from TS code\n",
+    "\n",
+    "[Listening to observable of form control.](https://github.com/davidpet/tutorials/commit/b5f40cd630426ff667d2ee06a127c8b5454af885) - FormControl.valueChanges stream\n",
+    "\n",
+    "[Adding FormGroup w/ multiple levels of values.](https://github.com/davidpet/tutorials/commit/90cd84782a42667653c47fad33598a0e98219d4b) - FormGroup w/ multiple form controls, querying for children\n",
+    "\n",
+    "[Nesting form group.](https://github.com/davidpet/tutorials/commit/6e13380129f8627e66c4294fa5275c854ad1740d) - FormGroup in FormGroup\n",
+    "\n",
+    "[Using patchValue().](https://github.com/davidpet/tutorials/commit/7f3c6b01ce58a09cd000e3b296e6c52763949271) - patchValue() to only set subset of fields instead of whole form\n",
+    "\n",
+    "[Protecting form keys from minification.](https://github.com/davidpet/tutorials/commit/3f599dc177ae6b00003a5907eea0fd272c37a5bf) - using `declare interface` and text keys to prevent name mangling of form control names, suppressing formatter from changing back\n",
+    "\n",
+    "[Using FormBuilder.](https://github.com/davidpet/tutorials/commit/f746b56afaf53377d17fceef4685bfd57f71839c) - more terse FormGroup instantiation\n",
+    "\n",
+    "[Adding validation.](https://github.com/davidpet/tutorials/commit/88fa8782e21dc36c61fbea7e96d1aa946de3ab1f) - validators in form control entries (as 2nd item in array), validation status value\n",
+    "\n",
+    "[Dynamic form with FormArray.](https://github.com/davidpet/tutorials/commit/02da80a532c5ce9af7e2468fc9eb02e9b65461f2) - `*ngFor` with `index` iteration, FormArray, dynamically sized array of controls, controls automatically named by index, resetting array\n",
+    "\n",
+    "[Non-nullable form values via FormControl() options.](https://github.com/davidpet/tutorials/commit/cb868af9ab17cc96f2ca91b1c01aa4c6ec3e0a55) - using options object of FormControl() instead of array syntax in builder, using non-nullable fields to get rid of |null boilerplate in interfaces\n",
+    "\n",
+    "[Adding reset button and default value for 1 field.](https://github.com/davidpet/tutorials/commit/415e437402431c5aef580a1441a8b8ca38d9c5d6) - default form values on reset\n",
+    "\n",
+    "[Using FormBuilder.nonNullable to cut down on boilerplate.](https://github.com/davidpet/tutorials/commit/8cfb47d6b14e24ff42955e79f27a385b7bde0196) - going back to array syntax by using the non-nullable calls\n",
+    "\n",
+    "[These didn't need to be optional.](https://github.com/davidpet/tutorials/commit/4dbb03fdcac5eba980fcef46b64cbdafe5d13734) - taking out some unnecessary ? in form model interface\n",
+    "\n",
+    "[Multiple validators and validation error text.](https://github.com/davidpet/tutorials/commit/cb7c3da7d9ee936bb720285a7cd265c622efe540) - multiple validators on 1 field by wrapping in an array, checking for specific errors in template\n",
+    "\n",
+    "[Adding custom validator with regex.](https://github.com/davidpet/tutorials/commit/2d40eeb76acbbd1966f75b9d2c439cc0c4d3f18c) - defining and using custom form validator (easier than the template-driven equivalent)\n",
+    "\n",
+    "[Using validation CSS classes.](https://github.com/davidpet/tutorials/commit/d9937084f6a3cc87c4e26fcc3956ca4b176c99d8) - adding 'required' class since not using html required attribute, using css classes to colorize like in template-driven tutorial\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35fd9338",
+   "id": "fe59ebc6",
    "metadata": {},
    "outputs": [],
    "source": []
