--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "id": "c4cfddf6",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1571,7 @@
        "undefined"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,6 +1592,180 @@
     "  }\n",
     "})();\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "62c1323f",
+   "metadata": {},
+   "source": [
+    "# String Keys\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ddbe69d6",
+   "metadata": {},
+   "source": [
+    "When creating an object instance, you can provide strings intead of straight keys as the keys.\n",
+    "\n",
+    "An important use case for this is to get around **minification**. Any symbol in code can be changed when the code is minified, so if you depended on a specific key existing by name, a minified version of the call may check the wrong key. An example of this is in **reactive forms** when you've specified the names of fields both in code and in the HTML template.\n",
+    "\n",
+    "This goes together with using **ambient interfaces** (see Modules & Imports notebook) to declare interfaces that won't get minified when you need to pass them around in code.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a6d999a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ x: 10, y: 20 }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  interface MyInterface {\n",
+    "    x: number;\n",
+    "    y: number;\n",
+    "  }\n",
+    "\n",
+    "  const m = {\n",
+    "    x: 10, // string as key\n",
+    "    y: 20, // normal key\n",
+    "  };\n",
+    "  console.log(m); // equivalent\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "56d9848e",
+   "metadata": {},
+   "source": [
+    "You can also do this on a class definition, but it's weird and probably not a good idea.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f248486e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class MyClass {\n",
+    "    \"a\" = 5;\n",
+    "  }\n",
+    "\n",
+    "  const m = new MyClass();\n",
+    "  console.log(m.a);\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8da2a01f",
+   "metadata": {},
+   "source": [
+    "# Partial Classes\n",
+    "\n",
+    "** not supported **\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "99a061b8",
+   "metadata": {},
+   "source": [
+    "# Partial<\\T\\>\n",
+    "\n",
+    "This type is syntactic magic for turning an interface into the same interface with **all optional fields**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5efb3bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ x: 10 }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  interface MyInterface {\n",
+    "    x: number;\n",
+    "    y: number;\n",
+    "    z?: number;\n",
+    "  }\n",
+    "\n",
+    "  // This would have an error if you didn't use Partial.\n",
+    "  const m: Partial<MyInterface> = {};\n",
+    "  m.x = 10;\n",
+    "  console.log(m);\n",
+    "})();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2186922b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
